--- a/app/src/main/res/drawable/bg_floating_dialog.xml
+++ b/app/src/main/res/drawable/bg_floating_dialog.xml
@@ -21,11 +21,11 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid
-        android:color="?attr/colorSurface" />
+    <!--    <solid-->
+    <!--        android:color="?attr/colorSurface" />-->
     <stroke
         android:width="1dp"
         android:color="?attr/colorOnSurface" />
     <corners
-        android:radius="?attr/dialogCornerRadius" />
+        android:radius="28dp" />
 </shape>
