--- a/app/src/main/res/layout/dialog_edit_book_author.xml
+++ b/app/src/main/res/layout/dialog_edit_book_author.xml
@@ -28,9 +28,10 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:viewBindingIgnore="true"
     >
 
     <com.google.android.material.appbar.AppBarLayout
@@ -48,214 +49,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/body_frame"
-        style="@style/Dialog.Fullscreen"
-        >
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/Dialog.Body"
-            >
-
-            <androidx.constraintlayout.helper.widget.Flow
-                android:id="@+id/flow_names"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:constraint_referenced_ids="lbl_family_name,lbl_given_names"
-                app:flow_horizontalAlign="start"
-                app:flow_horizontalBias="0"
-                app:flow_horizontalGap="@dimen/field_margin_inline"
-                app:flow_horizontalStyle="packed"
-                app:flow_maxElementsWrap="2"
-                app:flow_verticalBias="0"
-                app:flow_verticalGap="@dimen/field_margin_top"
-                app:flow_wrapMode="aligned"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lbl_family_name"
-                style="@style/TIL.AutoCompleteTextView"
-                android:layout_width="@dimen/til_fixed_width_personal_name"
-                android:hint="@string/lbl_family_name"
-                >
-
-                <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/family_name"
-                    style="@style/acPersonalNameTextEntry"
-                    android:imeOptions="actionNext"
-                    tools:ignore="LabelFor"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lbl_given_names"
-                style="@style/TIL.AutoCompleteTextView"
-                android:layout_width="@dimen/til_fixed_width_personal_name"
-                android:hint="@string/lbl_given_names"
-                >
-
-                <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/given_names"
-                    style="@style/acPersonalNameTextEntry"
-                    android:imeOptions="actionDone"
-                    tools:ignore="LabelFor"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <CheckBox
-                android:id="@+id/cbx_is_complete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lbl_author_is_complete"
-                app:layout_constraintStart_toStartOf="@id/lbl_family_name"
-                app:layout_constraintTop_toBottomOf="@id/lbl_given_names" />
-
-            <TextView
-                android:id="@+id/lbl_real_author_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/section_margin_top"
-                android:text="@string/lbl_author_pseudonym"
-                app:layout_constraintStart_toStartOf="@id/flow_names"
-                app:layout_constraintTop_toBottomOf="@id/cbx_is_complete"
-                />
-
-            <!-- NO hint text! -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lbl_real_author"
-                style="@style/TIL.AutoCompleteTextView"
-                android:layout_width="@dimen/til_fixed_width_personal_name"
-                android:layout_marginTop="@dimen/section_margin_top"
-                app:layout_constraintStart_toStartOf="@id/lbl_family_name"
-                app:layout_constraintTop_toBottomOf="@id/lbl_real_author_header"
-                >
-
-                <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                    android:id="@+id/real_author"
-                    style="@style/acPersonalNameTextEntry"
-                    android:imeOptions="actionDone"
-                    tools:ignore="LabelFor"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.divider.MaterialDivider
-                style="@style/Widget.Material3.MaterialDivider"
-                android:id="@+id/barrier_types_top"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/section_margin_top"
-                app:layout_constraintTop_toBottomOf="@id/lbl_real_author"
-                />
-
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/btn_use_author_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/section_margin_top"
-                android:checked="true"
-                android:text="@string/lbl_author_type"
-                app:layout_constraintStart_toStartOf="@id/flow_names"
-                app:layout_constraintTop_toBottomOf="@id/barrier_types_top"
-                />
-
-            <!--suppress LongLine -->
-            <androidx.constraintlayout.helper.widget.Flow
-                android:id="@+id/author_type_group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/section_margin_top"
-                app:constraint_referenced_ids="cbx_author_type_writer,cbx_author_type_intro,cbx_author_type_contributor,cbx_author_type_translator,cbx_author_type_editor,cbx_author_type_narrator,cbx_author_type_artist,cbx_author_type_inking,cbx_author_type_colorist,cbx_author_type_cover_artist,cbx_author_type_cover_inking,cbx_author_type_cover_colorist"
-                app:flow_horizontalAlign="start"
-                app:flow_horizontalBias="0.5"
-                app:flow_horizontalGap="@dimen/field_margin_inline"
-                app:flow_horizontalStyle="packed"
-                app:flow_maxElementsWrap="6"
-                app:flow_verticalBias="0"
-                app:flow_verticalGap="@dimen/field_margin_top"
-                app:flow_wrapMode="aligned"
-                app:layout_constraintStart_toStartOf="@id/flow_names"
-                app:layout_constraintTop_toBottomOf="@id/btn_use_author_type"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_writer"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_writer"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_intro"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_intro"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_contributor"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_contributor"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_translator"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_translator"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_editor"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_editor"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_narrator"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_narrator"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_artist"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_artist"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_inking"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_inking"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_colorist"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_colorist"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_cover_artist"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_cover_artist"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_cover_inking"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_cover_inking"
-                />
-
-            <CheckBox
-                android:id="@+id/cbx_author_type_cover_colorist"
-                style="@style/AuthorStyleCheckBox"
-                android:text="@string/lbl_author_type_cover_colorist"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
+    <include
+        layout="@layout/dialog_edit_book_author_content" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
