--- a/app/src/main/res/layout/dialog_styles_menu.xml
+++ b/app/src/main/res/layout/dialog_styles_menu.xml
@@ -43,29 +43,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/body_frame"
-        style="@style/Dialog.Frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/styles_list"
-            style="@style/Dialog.Body.RecyclerView"
-            app:layout_constraintBottom_toTopOf="@id/buttonPanel"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:itemCount="14"
-            tools:listitem="@layout/row_choice_single"
-            />
-
-        <include
-            android:id="@+id/buttonPanel"
-            layout="@layout/inc_dialog_buttonbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/dialog_styles_menu_content" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
